--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+    
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,10 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.2.10",
     "nodemon": "^2.0.20",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "webpack": "^5.74.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.10.0"
   }
 }
